Fix: Carousel dimension overflow in index shows page

--- a/app/assets/stylesheets/components/_slider.scss
+++ b/app/assets/stylesheets/components/_slider.scss
@@ -85,6 +85,7 @@
 // Index carousel
 
 .carousel-dimension {
+  overflow: hidden;
 	width: 100%;
 	height: 100%;
 	mask-image: linear-gradient(to left, transparent 1%, black 20%)
